Курсовая работа № 3. Пилотная версия